--- a/System/src/main/resources/fxml/TrainUI.fxml
+++ b/System/src/main/resources/fxml/TrainUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
@@ -8,16 +9,6 @@
 
 <AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <Pane fx:id="DROP_DOWN" layoutX="0.0" layoutY="1.0" prefHeight="201.0" prefWidth="179.0">
-      <children>
-        <MenuButton layoutX="5.0" layoutY="4.0" mnemonicParsing="false" prefHeight="37.9609375" prefWidth="179.00001220703126" text="Train">
-          <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-          </items>
-        </MenuButton>
-      </children>
-    </Pane>
     <Pane id="E_BRAKE" layoutX="5.0" layoutY="566.0" prefHeight="126.0" prefWidth="124.0">
       <children>
         <Button fx:id="EMERGENCY_BRAKE" layoutX="-4.0" layoutY="0.0" mnemonicParsing="false" prefHeight="132.0001220703125" prefWidth="136.00001362305193" style="-fx-background-color: crimson" text="E" textFill="WHITE">
@@ -35,16 +26,21 @@
     <Pane id="CENTRAL_INDICATORS" layoutX="298.0" layoutY="47.0" prefHeight="291.0" prefWidth="551.0">
       <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccedff" height="295.0390625" layoutX="-49.0" layoutY="-2.0" stroke="WHITE" strokeType="INSIDE" width="653.0" />
-        <Pane fx:id="ACCELERATION_GAUGE_PANE" layoutX="350.0" layoutY="14.0" prefHeight="176.9610595703125" prefWidth="199.0" />
+        <Pane fx:id="ACCELERATION_GAUGE_PANE" layoutX="350.0" layoutY="14.0" prefHeight="176.9610595703125" prefWidth="199.0">
+          <children>
+            <TextField fx:id="POWER" alignment="CENTER" layoutX="-146.0" layoutY="14.0" prefHeight="37.9609375" prefWidth="146.0" />
+          </children>
+        </Pane>
         <Pane fx:id="SPEED_GAUGE_PANE" layoutX="-46.0" layoutY="14.0" prefHeight="176.96103749999747" prefWidth="200.0" />
-        <Label layoutX="208.0" layoutY="2.0" text="Input Power (kW)">
+        <Label layoutX="229.0" layoutY="4.0" text="Input Power">
           <font>
             <Font name="Arial" size="18.0" fx:id="x1" />
           </font>
         </Label>
-        <Label font="$x1" layoutX="235.0" layoutY="259.0" text="Authority" />
-        <TextField fx:id="POWER" alignment="CENTER" layoutX="204.0" layoutY="22.0" prefHeight="37.9609375" prefWidth="146.0" />
+        <Label font="$x1" layoutX="245.0" layoutY="259.0" text="Authority" />
         <TextField fx:id="AUTHORITY" alignment="CENTER" layoutX="204.0" layoutY="221.0" prefHeight="37.9609375" prefWidth="146.0" />
+        <Label layoutX="324.0" layoutY="37.0" text="kW" />
+        <Label layoutX="328.0" layoutY="230.0" text="mi" />
       </children>
     </Pane>
     <Pane id="RIGHT_HAND_INDICATORS" layoutX="815.0" layoutY="5.0" prefHeight="561.0" prefWidth="331.0">
@@ -60,7 +56,7 @@
         <Label font="$x2" layoutX="132.0" layoutY="174.0" text="Width" textAlignment="CENTER" />
         <Label font="$x2" layoutX="127.0" layoutY="233.0" text="Height" textAlignment="CENTER" />
         <Label font="$x2" layoutX="56.0" layoutY="469.0" text="Passenger Count" textAlignment="CENTER" />
-        <Label font="$x2" layoutX="138.0" layoutY="290.0" text="Mass" textAlignment="CENTER" />
+        <Label font="$x2" layoutX="123.0" layoutY="290.0" text="Weight" textAlignment="CENTER" />
         <TextField id="LENGTH" fx:id="ID" layoutX="183.0" layoutY="54.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
         <TextField fx:id="WIDTH" layoutX="183.0" layoutY="166.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
         <TextField fx:id="HEIGHT" layoutX="183.0" layoutY="225.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
@@ -69,6 +65,10 @@
         <TextField fx:id="CREW_COUNT" layoutX="183.0" layoutY="400.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
         <TextField fx:id="PASSENGER_COUNT" layoutX="183.0" layoutY="461.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
         <Label font="$x2" layoutX="139.0" layoutY="62.0" text="Train" textAlignment="CENTER" />
+        <Label layoutX="293.0" layoutY="117.0" text="ft" />
+        <Label layoutX="293.0" layoutY="175.0" text="ft" />
+        <Label layoutX="293.0" layoutY="234.0" text="ft" />
+        <Label layoutX="284.0" layoutY="291.0" text="lbs" />
       </children>
     </Pane>
     <Pane layoutX="654.0" layoutY="359.0" prefHeight="200.0" prefWidth="200.0">
@@ -78,25 +78,28 @@
         <RadioButton fx:id="BRAKE_FAILURE" layoutX="18.0" layoutY="124.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Brake Failure" />
       </children>
     </Pane>
-    <Slider id="CABIN_TEMP" fx:id="CABIN_TEMP_SLIDER" layoutX="72.0" layoutY="127.0" orientation="VERTICAL" prefHeight="167.0" prefWidth="52.0" />
-    <Label layoutX="35.0" layoutY="347.0" text="Cabin Temperature" />
-    <TextField fx:id="CABIN_TEMP" layoutX="30.0" layoutY="300.0" prefHeight="37.9609375" prefWidth="136.0" />
-    <Circle fx:id="BRAKE_INDICATOR" fill="WHITE" layoutX="90.0" layoutY="464.0" radius="24.0" strokeType="INSIDE">
+    <Slider id="CABIN_TEMP" fx:id="CABIN_TEMP_SLIDER" layoutX="91.0" layoutY="83.0" orientation="VERTICAL" prefHeight="167.0" prefWidth="52.0" />
+    <Label layoutX="54.0" layoutY="303.0" text="Cabin Temperature" />
+    <TextField fx:id="CABIN_TEMP" layoutX="49.0" layoutY="256.0" prefHeight="37.9609375" prefWidth="136.0" />
+    <Circle fx:id="BRAKE_INDICATOR" fill="WHITE" layoutX="112.0" layoutY="445.0" radius="24.0" strokeType="INSIDE">
       <stroke>
         <Color blue="0.500" green="0.500" red="0.500" fx:id="x3" />
       </stroke>
     </Circle>
-    <Circle fx:id="LIGHTS_INDICATOR" fill="WHITE" layoutX="321.0" layoutY="465.0" radius="24.0" stroke="$x3" strokeType="INSIDE" />
-    <Rectangle fx:id="LEFT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="473.0" layoutY="425.0" strokeType="INSIDE" width="26.0">
+    <Circle fx:id="LIGHTS_INDICATOR" fill="WHITE" layoutX="306.0" layoutY="446.0" radius="24.0" stroke="$x3" strokeType="INSIDE" />
+    <Rectangle fx:id="LEFT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="466.0" layoutY="411.0" strokeType="INSIDE" width="26.0">
       <stroke>
         <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
       </stroke>
     </Rectangle>
-    <Rectangle fx:id="RIGHT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="525.0" layoutY="426.0" stroke="$x4" strokeType="INSIDE" width="26.0" />
-    <Label layoutX="68.0" layoutY="508.0" text="Brakes" />
-    <Label layoutX="493.0" layoutY="514.0" text="Doors" />
-    <Label layoutX="300.0" layoutY="508.0" text="Lights" />
-    <Label layoutX="564.0" layoutY="454.0" text="R" />
-    <Label layoutX="451.0" layoutY="455.0" text="L" />
+    <Rectangle fx:id="RIGHT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="518.0" layoutY="412.0" stroke="$x4" strokeType="INSIDE" width="26.0" />
+    <Label layoutX="90.0" layoutY="489.0" text="Brakes" />
+    <Label layoutX="486.0" layoutY="500.0" text="Doors" />
+    <Label layoutX="285.0" layoutY="489.0" text="Lights" />
+    <Label layoutX="557.0" layoutY="440.0" text="R" />
+    <Label layoutX="444.0" layoutY="441.0" text="L" />
+    <Label layoutX="171.0" layoutY="265.0" text="F" />
+    <Label layoutX="137.0" layoutY="230.0" text="0   F" />
+    <Label layoutX="131.0" layoutY="88.0" text="100  F" />
   </children>
 </AnchorPane>
